[package]
name = "evento-api"
version = "0.1.0"
authors = ["Ricardo Gamba Lavin <gamba@fb.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.11", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
log = "0.4"

[dev-dependencies]
mockall = "0.9.0"

[build-dependencies]
rustc_version = "0.3.0"
