[package]
name = "evento-api"
version = "0.1.0"
authors = ["Ricardo Gamba Lavin <gamba@fb.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
actix-web = "3.0.2"
async-trait = "0.1"
chrono = { version = "0.4.11", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.5"
env_logger = "0.7.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
log = "0.4"
futures = "0.3.4"
tokio = { version = "0.2.21", features = ["full", "time"] }

[dev-dependencies]
mockall = "0.9.0"
evento-derive = { path = "../evento-derive" }

[build-dependencies]
rustc_version = "0.3.0"
