[package]
name = "evento-engine"
version = "0.1.0"
authors = ["Ricardo Gamba Lavin <gamba@fb.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4.11", default-features = false, features = ["clock", "serde"] }
evento-api = { path = "../evento-api" }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0"
libloading = "0.6"